Change HTTPRequestService and its implementation to JDK's HttpClient backend.